feat: refine scoring logic and add new strategies (S8, S9, S13)
- **ai-engine/scorer.py**: Updated gap and strength scoring logic for precision. Introduced new strategies: Golden Cross (S8), Pullback Swing (S9), and Box Breakout (S13) with tailored scoring criteria.
- **websocket-listener/ws_client.py**: Adjusted market hours handling and defaulted `BYPASS_MARKET_HOURS` to true for testing. Set Kiwoom mode to real by default.
- **api-orchestrator**: Simplified Redis operations with `toList()` and removed unused annotations for cleaner code.